--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
@@ -17,10 +18,13 @@
     "json-records": "^1.0.5",
     "node-notifier": "^10.0.1",
     "open": "^8.4.0",
-    "xml2json": "^0.12.0"
+    "xml2js": "^0.4.23"
+  },
+  "devDependencies": {
+    "pkg": "^5.7.0"
   },
   "peerDependencies": {
-    "node-notifier": ">=6.0.0"
+    "node-notifier": "^10.0.1"
   },
   "peerDependenciesMeta": {
     "node-notifier": {
@@ -28,6 +32,8 @@
     }
   },
   "pkg": {
+    "targets": [ "node18-windows-x64", "node18-macos-x64" ],
+    "assets": "./*.png",
     "outputPath": "dist"
   }
 }
