--- a/package.json
+++ b/package.json
@@ -14,26 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
-    "copy-paste": "^1.3.0",
+    "clipboardy": "^2.3.0",
     "json-records": "^1.0.5",
+    "node-dbus-notifier": "^0.3.1",
     "node-notifier": "^10.0.1",
     "open": "^8.4.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "pkg": "^5.7.0"
-  },
-  "peerDependencies": {
-    "node-notifier": "^10.0.1"
-  },
-  "peerDependenciesMeta": {
-    "node-notifier": {
-      "optional": true
-    }
-  },
-  "pkg": {
-    "targets": [ "node18-windows-x64", "node18-macos-x64" ],
-    "assets": "./*.png",
-    "outputPath": "dist"
   }
 }
